# casimir-fdfd

./: .coveralls.yml  .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
src/: config.rs  greenfunctions.rs  main.rs  scalarfield.rs  scaledvectorfield.rs  vectorfield.rs  world.rs
src/fields/: mod.rs  scalarfield.rs  scaledvectorfield.rs  vectorfield.rs
src/greenfunctions/: cosinebasis.rs  mod.rs  operator.rs
src/world/: boundingbox.rs  material.rs  mod.rs  shape.rs
worlds/: plates_medium.json  plates_small.json  plates_tiny.json  sphere_plate_medium.json  spheres  spheres_medium.json
