[package]
name = "casimir-fdfd"
version = "0.1.0"
authors = ["Thomas <denhollander.thomas@gmail.com>"]
description = "An implementation of a stress-tensor based FDFD method for computing Casimir forces"
license = "MIT"
documentation = "https://docs.rs/casimir-fdfd/"
repository = "https://github.com/ThomasdenH/casimir-fdfd/"

[dependencies]pbr = "1.0.1"
rayon = "1.0.1"
serde_json = "1.0"
failure = "0.1.1"
serde_derive = "1.0.66"
serde = "1.0.66"
clap = "2.31.2"

[dependencies.nalgebra]
version = "0.15.1"
features = ["serde-serialize"]

[dev-dependencies]
assert_approx_eq = "1.0.0"

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
overflow-checks = false
